deploy/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: castor-api
  labels:
    castor.io/phase: configuration
spec:
  selector:
    app: castor-api
  ports:
    - name: http
      port: 1234
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: castor-web
  labels:
    castor.io/phase: configuration
spec:
  selector:
    app: castor-web
  ports:
    - name: http
      port: 3000
      targetPort: http
